@@ -8,8 +8,6 @@
 
 *) startup:
 	--make sure that the outbox gets configured correctly as an outbox
-	--check subscribing to subfolders w/disconnected/ssl
-*) check disconnected imap adding nested folders (foo/bar/baz/bear)
 
 *) support windows registry attachment associations.
 	-- check icemail
